--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>project11</build_depend>
   <build_depend>asv_msgs</build_depend>
+  <build_depend>diagnostic_msgs</build_depend>
   <build_export_depend>geographic_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>marine_msgs</build_export_depend>
@@ -63,6 +64,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>project11</build_export_depend>
   <build_export_depend>asv_msgs</build_export_depend>
+  <build_export_depend>diagnostic_msgs</build_export_depend>
   <exec_depend>geographic_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>marine_msgs</exec_depend>
@@ -70,6 +72,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>project11</exec_depend>
   <exec_depend>asv_msgs</exec_depend>
+  <exec_depend>diagnostic_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
