Updated to new display system, added geoviz channel, removed older depracated ones.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   project11
   diagnostic_msgs
+  geographic_visualization_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -153,8 +154,8 @@ add_executable(vehicle_node src/vehicle.cpp)
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-add_dependencies(operator_node asv_msgs_generate_messages_cpp)
-add_dependencies(vehicle_node asv_msgs_generate_messages_cpp)
+add_dependencies(operator_node geographic_visualization_msgs_generate_messages_cpp)
+add_dependencies(vehicle_node geographic_visualization_msgs_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
