--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,15 @@ include_directories(
 
 add_executable(operator_node src/operator.cpp)
 add_executable(vehicle_node src/vehicle.cpp)
+add_executable(remote_server_node src/remote_server.cpp)
+add_executable(remote_client_node src/remote_client.cpp)
 
 add_dependencies(operator_node geographic_visualization_msgs_generate_messages_cpp)
 add_dependencies(vehicle_node geographic_visualization_msgs_generate_messages_cpp)
+add_dependencies(remote_server_node geographic_visualization_msgs_generate_messages_cpp)
+add_dependencies(remote_client_node geographic_visualization_msgs_generate_messages_cpp)
 
 target_link_libraries(operator_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(vehicle_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(remote_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(remote_client_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
