--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ add_executable(operator_node src/operator.cpp)
 add_executable(vehicle_node src/vehicle.cpp)
 add_executable(remote_server_node src/remote_server.cpp)
 add_executable(remote_client_node src/remote_client.cpp)
+add_executable(johnny5_server_node src/johnny5_server.cpp)
+add_executable(johnny5_client_node src/johnny5_client.cpp)
 
 add_dependencies(operator_node geographic_visualization_msgs_generate_messages_cpp)
 add_dependencies(vehicle_node geographic_visualization_msgs_generate_messages_cpp)
@@ -44,3 +46,5 @@ target_link_libraries(operator_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(vehicle_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(remote_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(remote_client_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(johnny5_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(johnny5_client_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
