Add udp client and server for sending position from operator station to vehicle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ add_executable(remote_server_node src/remote_server.cpp)
 add_executable(remote_client_node src/remote_client.cpp)
 add_executable(johnny5_server_node src/johnny5_server.cpp)
 add_executable(johnny5_client_node src/johnny5_client.cpp)
+add_executable(position_server_node src/position_server.cpp)
+add_executable(position_client_node src/position_client.cpp)
 
 add_dependencies(operator_node geographic_visualization_msgs_generate_messages_cpp)
 add_dependencies(vehicle_node geographic_visualization_msgs_generate_messages_cpp)
@@ -48,3 +50,5 @@ target_link_libraries(remote_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(remote_client_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(johnny5_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(johnny5_client_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(position_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(position_client_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
