Add statistics output and node to display those stats

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,10 @@ add_message_files(
   RemoteAdvertiseInternal.msg
   RemoteSubscribeInternal.msg
   MessageInternal.msg
+  ChannelInfo.msg
+  ChannelInfoArray.msg
+  ChannelStatistics.msg
+  ChannelStatisticsArray.msg
 )
 
 add_service_files(
@@ -54,6 +58,7 @@ set(UDP_BRIDGE_SOURCES
 )
 
 add_executable(udp_bridge_node src/udp_bridge_node.cpp ${UDP_BRIDGE_SOURCES})
+add_executable(udp_bridge_ui src/udpbridge_ui.cpp)
 add_executable(operator_node src/operator.cpp)
 add_executable(vehicle_node src/vehicle.cpp)
 add_executable(remote_server_node src/remote_server.cpp)
@@ -64,12 +69,14 @@ add_executable(position_server_node src/position_server.cpp)
 add_executable(position_client_node src/position_client.cpp)
 
 add_dependencies(${PROJECT_NAME}_node ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME}_ui ${PROJECT_NAME}_generate_messages_cpp)
 add_dependencies(operator_node geographic_visualization_msgs_generate_messages_cpp)
 add_dependencies(vehicle_node geographic_visualization_msgs_generate_messages_cpp)
 add_dependencies(remote_server_node geographic_visualization_msgs_generate_messages_cpp)
 add_dependencies(remote_client_node geographic_visualization_msgs_generate_messages_cpp)
 
 target_link_libraries(udp_bridge_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
+target_link_libraries(udp_bridge_ui ${catkin_LIBRARIES})
 target_link_libraries(operator_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(vehicle_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
 target_link_libraries(remote_server_node ${catkin_LIBRARIES} ${ZLIB_LIBRARIES})
